5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4056/executions/1578_1330.log
== SUBMITION (2019-03-13 19:36:12) 
-- CODE:
print (250/6)
-- EXECUTION TIME:
0.150025
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:37:08) 
-- CODE:
round (250/6)
-- EXECUTION TIME:
0.211341
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:39:26) 
-- CODE:
print (43,5*6) 
-- EXECUTION TIME:
0.170727
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
43 30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:39:33) 
-- CODE:
print (45,5*6) 
-- EXECUTION TIME:
0.263091
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
45 30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 19:40:18) 
-- CODE:
round (41.6*6)
-- EXECUTION TIME:
0.165849
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:16:34) 
-- CODE:
round (41,6*6)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:19:04) 
-- CODE:
round (41.6*6)
-- OUTPUT:
45
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:19:59) 
-- CODE:
round ("41.6*6")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("41.6*6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:20:14) 
-- CODE:
round (41.6*6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("41.6*6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:21:00) 
-- CODE:
round (41.6**6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("41.6*6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:21:32) 
-- CODE:
round (250/6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("41.6*6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:21:49) 
-- CODE:
round (250//6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("41.6*6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:23:25) 
-- CODE:
round (250 % 6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("41.6*6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:23:35) 
-- CODE:
round (250 // 6)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round ("41.6*6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:24:11) 
-- CODE:
print (250 // 6)

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:24:46) 
-- CODE:
round (250 // 6)

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:25:23) 
-- CODE:
print (round (250 // 6))

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:25:56) 
-- CODE:
print ("round (250 // 6)")

-- OUTPUT:
round (250 // 6)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:26:48) 
-- CODE:
print ("round") 250 // 6))

-- ERROR:
File "XXXX", line 1
    print ("round") 250 // 6))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:27:55) 
-- CODE:
print ("round") 250 // 6

-- ERROR:
File "XXXX", line 1
    print ("round") 250 // 6
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:28:25) 
-- CODE:
print (250//6)

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:28:41) 
-- CODE:
print (250 // 6)

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:28:55) 
-- CODE:
print (250 // 6 ** 250)

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:31:53) 
-- CODE:
print("%6%" round(250,6))

-- ERROR:
File "XXXX", line 1
    print("%6%" round(250,6))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:32:08) 
-- CODE:
print("% 6" round(250,6))

-- ERROR:
File "XXXX", line 1
    print("% 6" round(250,6))
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:32:50) 
-- CODE:
print ("round") 250 // 6

-- ERROR:
File "XXXX", line 1
    print ("round") 250 // 6
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 22:33:22) 
-- CODE:
def arredondar(num):
    return float( '%g' % ( num ) )
print(arredondar 41 + 0.66)
def arredondar(num):
    return float( '%g' % ( num ) )
print(arredondar(41 + 0.66)
-- ERROR:
File "XXXX", line 3
    print(arredondar 41 + 0.66)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:05:32) 
-- CODE:
print("45.6")
-- OUTPUT:
45.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:05:39) 
-- CODE:
round("45.6")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("45.6")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:05:47) 
-- CODE:
round("45")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round("45")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:09:21) 
-- CODE:
a=6
b=250
racha=b/a
print(round(racha,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:09:34) 
-- CODE:
a=6
b=250
racha=b/a
print(round(racha.2))
-- ERROR:
File "XXXX", line 4
    print(round(racha.2))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:10:06) 
-- CODE:
a=6
b=250
racha=b/a
print(round(racha,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:10:18) 
-- CODE:
a=6
c=250
racha=c/a
print(round(racha,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:10:36) 
-- CODE:
a=6
b=250
racha=b/a
print(round(racha,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:11:10) 
-- CODE:
a=6
b=250
racha=b/a
print("round(racha,2)")
-- OUTPUT:
round(racha,2)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:11:22) 
-- CODE:
a=6
b=250
racha=b/a
print("round(racha,2"))
-- ERROR:
File "XXXX", line 4
    print("round(racha,2"))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:11:36) 
-- CODE:
a=6
b=250
racha=b/a
print(round(racha,1))
-- OUTPUT:
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:11:49) 
-- CODE:
a=6
b=250
racha=b/a
print(round(racha,3))
-- OUTPUT:
41.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:12:01) 
-- CODE:
a=6
b=250
racha= b/a
print(round(racha,2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:12:33) 
-- CODE:
a=6
b=250
racha=b/a
print(round(racha,2))
-- EXECUTION TIME:
0.150024
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
